<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainAtomBuilder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/universe_bg2"
    tools:context=".gui.AtomActivity">

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ddLeptones"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_clear_button"
        android:text="@string/clear" />

    <LinearLayout
        android:id="@+id/layoutMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblMassSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corners_bg_title"
            android:text="@string/massParts"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtMassSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_show_core_amount"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblMassEmpiric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corners_bg_title"
            android:text="@string/massEmpiric"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtMassEmpiric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_show_core_amount"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corners_bg_title"
            android:text="@string/element"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_show_core_amount"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corners_bg_title"
            android:text="@string/symbol"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_show_core_amount"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners_bg_title"
        android:gravity="center"
        android:text="@string/AtomBuilder"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutShowAmounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblTitle"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblCoreAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_bg_button"
                android:text="@string/amountCore"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtShowCoreAmount"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@drawable/bg_show_core_amount"
                android:gravity="center"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblProtonAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_bg_button"
                android:text="@string/protonAmount"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtShowProtonAmount"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:background="@drawable/bg_show_core_amount"
                android:gravity="center"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblNeutronAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_bg_button"
                android:text="@string/neutronAmount"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtShowNeutronAmount"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@drawable/bg_show_core_amount"
                android:gravity="center"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/ddAtomCore"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_centerInParent="true"
        android:background="@drawable/atom_core_shape">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/ddLeptones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_leptonen_shape">

        <TextView
            android:id="@+id/lblProton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="45dp"
            android:gravity="center"
            android:text="@string/proton"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblNeutron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/neutronen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ddProton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="50dp"
            android:background="@drawable/proton_shape">

        </ImageView>

        <ImageView
            android:id="@+id/ddNeutron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@drawable/neutron_shape">

        </ImageView>

    </FrameLayout>

</RelativeLayout>